Reset this to beginning and when you restart it will repopulate your in-memory mongo.

--- a/cloudstream/src/main/resources/application.yml
+++ b/cloudstream/src/main/resources/application.yml
@@ -18,3 +18,7 @@ spring.cloud.stream.bindings:
     group: email_processor
   emailsSent:
     destination: emails_sent
+spring.cloud.stream.kafka.bindings:
+  input.consumer:
+    resetOffsets: true
+    startOffset: earliest
